The problem with the markdown is that plain text is automatically wrapped in <p>, so if we wrap <p> around <img> we will have a problem, we can ignore it, but we fixed it by checking for that case and replace the wrapping <p> directly with the rendered <img>, we still use our <Image> component to enjoy the benefits of responsive images with srcset attribute, lazy loading capabilities and other

--- a/components/posts/post-detail/post-content.module.css
+++ b/components/posts/post-detail/post-content.module.css
@@ -13,6 +13,11 @@
   color: var(--color-grey-800);
 }
 
+/* attempt to fix the loaded image size */
+/* .content img {
+  max-width: 200px;
+} */
+
 .content .image {
   margin: var(--size-4) auto;
   width: 100%;
